# locs-onvote-backend/public/swagger.json
@@ -381,8 +381,8 @@
                 "tags": [
                     "Election"
                 ],
-                "summary": "유권자 생성",
-                "description": "유권자 생성",
+                "summary": "선거 명부 생성",
+                "description": "선거 명부 생성",
                 "operationId": "uploadFile",
                 "consumes": [
                     "application/json"
@@ -533,9 +533,8 @@
                 "tags": [
                     "Election"
                 ],
-                "summary": "유권자 생성",
-                "description": "유권자 생성",
-                "operationId": "uploadFile",
+                "summary": "후보자 생성",
+                "description": "후보자 생성",
                 "consumes": [
                     "application/json"
                 ],
@@ -560,19 +559,51 @@
                     }
                 ],
                 "requestBody": {
+                    "description": "유권자 인덱스는 필수",
                     "content": {
                         "multipart/form-data": {
                             "schema": {
                                 "type": "object",
-                                "description": "관리자 계정과 패스워드는 필수",
                                 "properties": {
-                                    "file": {
+                                    "voter_id": {
+                                        "type": "int",
+                                        "format": "int",
+                                        "description": "유권자 인덱스"
+                                    },
+                                    "symbole": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "description": "기호"
+                                    },
+                                    "team": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "description": "팀명"
+                                    },
+                                    "pledge": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "description": "공약사항"
+                                    },
+                                    "youtube": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "description": "유튜브 주소"
+                                    },
+                                    "img": {
                                         "type": "string",
                                         "format": "binary",
-                                        "required": true
+                                        "description": "이미지 사진"
+                                    },
+                                    "pdf": {
+                                        "type": "string",
+                                        "format": "binary",
+                                        "description": "PDF 파일"
                                     }
                                 },
-                                "required": []
+                                "required": [
+                                    "voter_id"
+                                ]
                             }
                         }
                     }
@@ -630,6 +661,233 @@
                         "required": false,
                         "type": "string",
                         "format": "string"
+                    }
+                ],
+                "requestBody": {},
+                "responses": {
+                    "200": {
+                        "description": "add Result",
+                        "scheam": {
+                            "type": "object",
+                            "$ref": "#/definitions/admin"
+                        }
+                    },
+                    "400": {
+                        "description": "Result error",
+                        "scheam": {
+                            "type": "integer"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/vote/{election}/ballot": {
+            "get": {
+                "tags": [
+                    "vote"
+                ],
+                "summary": "개표확인자 리스트 조회",
+                "description": "개표확인자 리스트 조회",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "x-access-token",
+                        "in": "header",
+                        "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MSwidXNlcm5hbWUiOiJhZG1pbiIsImVuZGRhdGUiOiIyMDIwLTEwLTE0VDA3OjI4OjAwLjAwMFoiLCJpYXQiOjE2MDI1NzE5OTEsImV4cCI6MTYwMzg2Nzk5MX0.C-MRpF8WurIzDrSbKemoUY6OKZ4epno7GxuMWbVrL9o",
+                        "description": "로그인시 생성되는 토큰",
+                        "required": true
+                    },
+                    {
+                        "name": "election",
+                        "in": "path",
+                        "description": "선거 인덱스",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "requestBody": {},
+                "responses": {
+                    "200": {
+                        "description": "add Result",
+                        "scheam": {
+                            "type": "object",
+                            "$ref": "#/definitions/admin"
+                        }
+                    },
+                    "400": {
+                        "description": "Result error",
+                        "scheam": {
+                            "type": "integer"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "vote"
+                ],
+                "summary": "개표확인자 추가",
+                "description": "개표확인자 추가",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "x-access-token",
+                        "in": "header",
+                        "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MSwidXNlcm5hbWUiOiJhZG1pbiIsImVuZGRhdGUiOiIyMDIwLTEwLTE0VDA3OjI4OjAwLjAwMFoiLCJpYXQiOjE2MDI1NzE5OTEsImV4cCI6MTYwMzg2Nzk5MX0.C-MRpF8WurIzDrSbKemoUY6OKZ4epno7GxuMWbVrL9o",
+                        "description": "로그인시 생성되는 토큰",
+                        "required": true
+                    },
+                    {
+                        "name": "election",
+                        "in": "path",
+                        "description": "선거 인덱스",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "requestBody": {
+                    "description": "유권자 인덱스는 필수",
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "voter_id": {
+                                        "type": "int",
+                                        "format": "int",
+                                        "description": "유권자 인덱스"
+                                    }
+                                },
+                                "required": [
+                                    "voter_id"
+                                ]
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "add Result",
+                        "scheam": {
+                            "type": "object",
+                            "$ref": "#/definitions/admin"
+                        }
+                    },
+                    "400": {
+                        "description": "Result error",
+                        "scheam": {
+                            "type": "integer"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/vote/{election}/ballot/{ballot}": {
+            "delete": {
+                "tags": [
+                    "vote"
+                ],
+                "summary": "개표확인자 삭제",
+                "description": "개표확인자 삭제",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "x-access-token",
+                        "in": "header",
+                        "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MSwidXNlcm5hbWUiOiJhZG1pbiIsImVuZGRhdGUiOiIyMDIwLTEwLTE0VDA3OjI4OjAwLjAwMFoiLCJpYXQiOjE2MDI1NzE5OTEsImV4cCI6MTYwMzg2Nzk5MX0.C-MRpF8WurIzDrSbKemoUY6OKZ4epno7GxuMWbVrL9o",
+                        "description": "로그인시 생성되는 토큰",
+                        "required": true
+                    },
+                    {
+                        "name": "election",
+                        "in": "path",
+                        "description": "선거 인덱스",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    },
+                    {
+                        "name": "ballot",
+                        "in": "path",
+                        "description": "선거 인덱스",
+                        "required": true,
+                        "type": "integer",
+                        "format": "int64"
+                    }
+                ],
+                "requestBody": {},
+                "responses": {
+                    "200": {
+                        "description": "add Result",
+                        "scheam": {
+                            "type": "object",
+                            "$ref": "#/definitions/admin"
+                        }
+                    },
+                    "400": {
+                        "description": "Result error",
+                        "scheam": {
+                            "type": "integer"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/vote/list": {
+            "get": {
+                "tags": [
+                    "vote"
+                ],
+                "summary": "선거 진행 리스트",
+                "description": "선거 진행 리스트",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "x-access-token",
+                        "in": "header",
+                        "example": "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6MSwidXNlcm5hbWUiOiJhZG1pbiIsImVuZGRhdGUiOiIyMDIwLTEwLTE0VDA3OjI4OjAwLjAwMFoiLCJpYXQiOjE2MDI1NzE5OTEsImV4cCI6MTYwMzg2Nzk5MX0.C-MRpF8WurIzDrSbKemoUY6OKZ4epno7GxuMWbVrL9o",
+                        "description": "로그인시 생성되는 토큰",
+                        "required": true
+                    },
+                    {
+                        "name": "start",
+                        "in": "query",
+                        "description": "시작날짜",
+                        "required": false,
+                        "type": "datetime",
+                        "format": "date-time",
+                        "example": "2020-01-02 15:00:00"
+                    },
+                    {
+                        "name": "end",
+                        "in": "query",
+                        "description": "끝날짜",
+                        "required": false,
+                        "type": "datetime",
+                        "format": "date-time",
+                        "example": "2020-01-02 15:00:00"
                     }
                 ],
                 "requestBody": {},
