# locs-onvote-backend/routes/vote/index.js
@@ -1,10 +1,15 @@
 var express = require('express');
 var controller = require("./controller");
-
+var admin = require("../admin/controller");
 var router = express.Router();
 
 /* GET users listing. */
 router.get('/', controller.getTest);
+router.get('/:election/ballot', admin.isLoginCheck, controller.getballotList)           // 개표확인자 리스트 조회
+router.post('/:election/ballot', admin.isLoginCheck, controller.setballotList)          // 개표확인자 추가
+router.delete('/:election/ballot/:ballot', admin.isLoginCheck, controller.deleteballotList)    // 개표확인자 삭제
 
+router.get('/list', admin.isLoginCheck, controller.getElectionList) // 선거 진행리스트 
 
+router.get('/:election/list', admin.isLoginCheck, controller.getVoteList)           // 투표 현황(임시)
 module.exports = router;
